2014-01-15  Kenneth Massie
 
 * Added feature to server.py to return static HTTP 1.0 response

2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.